--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,10 +1,10 @@
 
 <div class="wrapper">
   <div class = "side_bar">
-    
+
     <%= render "side_bar" %>
   </div>
-  <div class = "main">
+  <div class = "chat">
     <%= render "main_chat" %>
   </div>
 </div>
