--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -16,6 +16,6 @@
       <%= message.content %>
     </div>
     <%# 投稿したユーザーのプロフィール画像を表示する %>
-    <%= image_tag message.image.valiant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
+    <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
   </div>>
 </div>
